resources/sass/pages/pagesections/_howSection.scss
//============================HOW SECTION=============================
.how-section__parent {
    padding: 75px 0;

    .how-icon-title {
        //@include font-style('SofiaPro-Medium', 22px, false, #000, 26px, -0.9px);
        @include font-size(22);
        @extend .SofiaPro-Medium;
        margin-bottom: 25px;
    }

    .how-icon-description {
        li,
        p {
            @extend .col-grey;
            line-height: 1.4;
        }
    }
}

.how-section {
    .row {
        @include media-breakpoint-up(md){
            @include reset-row-spacing(8px);
        }
    }

    @include media-breakpoint-down(md) {
        .carousel-item:not(.active) {
            display: none;
        }
    }

    .carousel-inner {
        position: relative;
        width: 100%;
        overflow: visible !important;
    }
}

.how-section__child {

    text-align: center;
    position: relative;

    .col-inner {
        //box-shadow: $box-shadow;
        padding: 30px;
        height: 380px;
        border-radius:  $border-radius;
    }

    .how-icon {
        margin-bottom: 20px;
        height: 60px;
        @include icon-bg-center(100%);
        background-size: contain;
    }

    .how-icon-step {
        padding-top: 0.35rem !important;
    }

    .how-icon-title {
        @include font-size(1.2rem);
        margin-bottom: 15px;
    }

    .help-link {
        margin-left: 5px;
    }
}

//============================ END HOW SECTION=============================

//============================ HOW PAGE =============================
.how-section__extra {
    .dropdown-toggle {
        padding: 8px 40px 8px 13px;
        @include font-size(16);
    }
}

#how_to_use_filter_policies .select-parent {

    background-color: #fff;
    padding: 1rem;
    border: 1px solid #d4d4d4;
    border-radius: $border-radius;
    width: 100% !important;

    label {
        width: 100%;
    }

    svg {
        position: absolute;
        @include v-c;
        right: 15px;
    }

    .select-wrapper,
    label {
        @include media-breakpoint-up(lg) {
            width: 50% !important;
        }
    }
}

